2004-03-19  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-response.adb:
	Minor typo fix.

2004-03-17  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-url.adb:
	(ASCII_7_Set): New type.
        (Build_Hex_Escape): New routine.
        (Hex_Escape): Now initialized using Build_Hex_Escape which uses
         Default_Encoding_Set.
        (Encode): New implementation based on Encoding_Set.
        Minor reformatting.
        Update copyright notice.

	* aws-url.ads:
	(Default_Encoding_Set): New constant.
        (Encode): Add parameter Encoding_Set with default being
         Default_Encoding_Set. The default value makes Encode behave as
         implemented before. It is now possible to select the set of
         characters to encode.
        Update copyright notice.

2004-03-12  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser-expr.adb:
	Update to new version. Fix handling of tag variable parameters.

2004-03-09  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-print_tree.adb,
          templates_parser-cached_files.adb:
        Better cache handling implementation.
        Properly release memory of cached files and properly detect up to
         date files for any include level.
	Update to version 7.5.

2004-03-09  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-client.adb:
	(Close): Update comments.
        Update copyright notice.

	* aws-net-ssl.ads:
	(Supported): Renamed to Is_Supported.
        (Is_Supported): Renaming of Supported.
        Update copyright notice.

2004-03-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client.adb:
	(Close): Catch only Tasking_Error and only from entry call.

	* aws-net-ssl.ads:
	(Supported): New constant.

2004-03-08  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Minor reformatting.

	* templates_parser-expr.adb:
	Complete rewrite to be a LL(0) parser.
        Patch contributed by Jean-Pierre Rosen.
        Updated to version 7.4.

2004-03-07  Pascal Obry  <p.obry@wanadoo.fr>
